# iris-validation

./: .git_archival.txt  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
iris-validation/: example.py  setup.py
iris-validation/iris_validation/: __init__.py  _defs.py
iris-validation/iris_validation/graphics/: chain.py
iris-validation/iris_validation/metrics/: __init__.py  residue.py  series.py
iris_validation/: __init__.py  _defs.py  pyproject.toml  utils.py
iris_validation/graphics/: chain.py  panel.py  residue.py
iris_validation/graphics/js/: constants.js  interaction.js
iris_validation/metrics/: __init__.py  chain.py  model.py  reflections.py  residue.py  series.py
src/iris_validation/: __init__.py  _defs.py  utils.py
src/iris_validation/graphics/: chain.py  panel.py  residue.py
src/iris_validation/graphics/js/: constants.js  interaction.js
src/iris_validation/metrics/: __init__.py  chain.py  model.py  residue.py
src/metrics/: chain.py
tests/: test_core.py  test_other.py
tests/test_data/: 3atp.fasta  3atp_0cyc.mtz  3atp_final.mtz  5ni1_data.json  5ni1_refined_data.json  neutron.mmcif  neutron.mtz
tests/test_output/: 1m1d_noCOV_noMP_noRamaZ_mpro.html  1m1d_noCOV_noMP_noRamaZ_mpro.json  2m0d_noCOV_noMP_noRamaZ_mpro.html  2m0d_noCOV_noMP_noRamaZ_mpro.json  2m2d_16chains_noCOV_noMP_noRamaZ_spro.json  2m2d_noCOV_noMP_RamaZ_mpro.html  2m2d_noCOV_noMP_RamaZ_mpro.json  2m2d_noCOV_noMP_noRamaZ_mpro.html  2m2d_noCOV_noMP_noRamaZ_mpro.json  acnr_noCOV_noMP_noRamaZ_spro.html  acnr_noCOV_noMP_noRamaZ_spro.json  test_2m2d_noCOV_MP_noRamaZ_spro.html  test_2m2d_noCOV_MP_noRamaZ_spro.json
