[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iris_validation"
version = "0.3.0"
description = "A package for interactive all-in-one graphical validation of 3D protein model iterations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
authors = [
    { name = "William Rochira", email = "william.rochira@hotmail.co.uk" },
    { name = "Jon Agirre", email = "jon.agirre@york.ac.uk" }
]
maintainers = [
    { name = "Jon Agirre", email = "jon.agirre@york.ac.uk" },
]
dependencies = [
    "svgwrite == 1.3.1"
]

[project.urls]
Homepage = "https://github.com/glycojones/iris-validation"
Issues = "https://github.com/glycojones/iris-validation/issues"


